# cadastral-check-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  schemas.py
app/api/: __init__.py  admin.py  auth.py  dependencies.py  routes.py
app/core/: __init__.py  config.py  database.py  security.py
app/services/: __init__.py  external_result.py
app/templates/admin/: base.html  history.html  history_item.html  login.html  panel.html  users.html
docs/: api_examples.md  architecture.md  database.md  decisions.md
external_service/: __init__.py  main.py
migrations/: 0001_create_request_history.sql  0002_create_users_and_link_history.sql
scripts/: __init__.py  migrate.py
tests/: conftest.py  test_admin.py  test_auth.py  test_external_result_client.py  test_external_service.py  test_history.py  test_input_validation.py  test_migrations.py  test_ping.py  test_query.py  test_result.py
