[project]
name = "cadastral-check-service"
version = "0.1.0"
description = "Backend service for cadastral checks"
authors = [
    { name = "Viktor Shadrin", email = "v.viktor.shadrin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "asyncpg (>=0.29,<1.0)",
    "pydantic-settings (>=2.0,<3.0)",
]

[dependency-groups]
dev = [
    "black>=24.0,<26.0",
    "flake8>=7.0,<8.0",
    "httpx2>=2.0,<3.0",
    "isort>=5.13,<6.0",
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
py_version = 312

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
